Add periods to article descriptions
I noticed them and now I can't unsee them.

--- a/articles/reducing-team-structuring-costs.mdx
+++ b/articles/reducing-team-structuring-costs.mdx
@@ -1,6 +1,6 @@
 ---
 title: Reducing cost of team restructuring
-description: Techniques that allow flexibility in changing teams and moving ownership
+description: Techniques that allow flexibility in changing teams and moving ownership.
 faIcon: faSitemap
 date: 2024-06-09
 lastEdit: 2024-06-09
