--- a/articles/static-nextjs.mdx
+++ b/articles/static-nextjs.mdx
@@ -1,6 +1,6 @@
 ---
 title: NextJs + S3 
-description: Notes getting NextJs working on S3 as a static site
+description: Notes getting NextJs working on S3 as a static site.
 faIcon: faRocket
 date: 2024-06-30
 lastEdit: 2024-06-30
