Rewrite heatmap article
Simplify it even more.

--- a/articles/behaviour-heatmap.mdx
+++ b/articles/behaviour-heatmap.mdx
@@ -13,81 +13,43 @@ This is how I think about getting better.
 
 ## Who you are is what you do
 
-Engineering levels/titles/positions are proxies for competence. The principal engineer title lets us assume the individual can deliver more value than an intern.
-While proxies like this are often quite valuable, it's important remember that what really matters in the end is an individual's ability do deliver value reliably.
+Engineering levels/titles/positions are proxies for competence: a principal engineer title sets an expectation of the amount of value that this person will deliver.
+While proxies like this are valuable it's important remember that what really matters is the value a person *actually* delivers, and their ability to do so reliably.
+Actually delivering value boils down to the actions you choose to take i.e. your behaviour.
 
-The effective difference between a junior software developer and a principal software developer is the actions they take throughout a day, and how those actions result in value.
+So getting better at our jobs is about realising that we can deliver more and figuring out how to modify your behaviour to enable you to do it.
+I think about this in the following steps:
 
-I see the process of getting better as recognising that you could deliver greater value, and then building behaviours that enable you to do so reliably.
-These steps try to lay out a way to do this with intent: 
-
-* Identify the type of value you think you can grow to deliver.
-* Break it down into key behaviours you would need to grow to do.
-* Honestly document your current behaviours.
-* Note the differences between current and future behaviours.
-* Iteratively work on changing your current behaviours into future ones.
+* State the value you want to be able to deliver.
+* Think of the key behaviours you think are needed to delivery this value.
+* Write down your current behaviours.
+* Work on closing the gap betweeh your current behaviours and your aspirational ones.
 
 
-## Future value: Who do you want to be when you grow-up?
+## Changing behaviour is hard
 
-To identify value I could eventually deliver, I like to build a vision of the person you'd like to become. 
-Often this is influenced by real people I admire, but it can also be an imaginary role model.
+I think it's important to break up aspirational improvement into chunks that you can focus on one at a time.
+Chunking by behaviour and having a clear representation of current behaviour vs aspirational behaviour gives what I think is a concrete view of how much change needs to happen. 
+This view also gives a sense of which behaviours need the most work/attention which allows me to prioritize the ones I feel are the most important.
 
-Write down the key values they deliver and write down what they would actually do: their behaviours.
-It helps to base this off of what your real-life role-models do, but it can also be a guess.
-This will be iterated on through feedback, so don't try to get this perfect.
+This exercise can be done visually, e.g. using colours to add more context. The result is what I call a **behaviour heatmap** and beyond using it for myself, I find it a useful when sharing my aspirations with mentors, managers, and peers. I've found this effective for helping them understand what I want to do and why.
 
-It also helps to do this across time-frames: what behaviours are daily vs weekly vs monthly?
+<figure>
+  <img alt="mapping out future-me on a whiteboard" src="/images/behaviour-heatmap.png"></img>
+  <figcaption>Example: behaviour heatmap</figcaption>
+</figure>
 
-## Current behaviour: What are you doing now?
+## Progress is incremental
 
-To understand the growth we have ahead of us, we need to understand how our current behaviour needs to change.
-So write down your current behaviours. 
+Alongside the heatmap, there are a few core principles that help me stay on track:
 
-There's no judgment here; regardless of reasons this is the current situation we find ourselves in and we need an accurate understanding of our starting-point for growth.
+ - Pick **one** behaviour to work on at any given time. Don't overwhelm yourself with changes.
+ - Allow yourslef to fail. Your ideas of how to change your behaviour or even which behaviours are worth adopting may be wrong. You should to be open to letting things fail so that you can take another approach. These failures are what experience is made of - you should proactively try learn lessons from them.
+ - Set time-limits to changes. Life can get in the way of your changes. Try them for a set time so that you know when you should try another approach.
+ - Find mentors. Learning to do new things is much easier when you have support and sponsorship. It's expected that we find teachers when learning a sport or instrument; there's no reason for this to be any different in our professions.
 
-## The delta: What needs to change?
+## Growth is the goal
 
-Take a look at both sets of behaviours and clearly mark which ones look like they need to change, and get a feel for how much change would be needed.
-In theory, once we've managed to change all of these behaviours, we should be very close to our goals.
-
-These differences between our current and future behaviours gives us a heatmap. It should help highlight which behaviours need the most attention. This is good; it allows us to priotize the behavious.
-Start by picking the top priority one and tweak your everyday behaviours until you achieve your desired behaviour
-
-![mapping out future-me on a whiteboard](/images/behaviour-heatmap.png)
-Example: behaviour heatmap
-
-## Working on behaviours
-
-**One at a time.** Pick one (1!) behaviour to work on at any given time. Changing behaviour is hard and I suggest creating some focus. 
-
-In many cases what you want to do might not be possible right away e.g. if future-you plays in a band once a month, then you need to be in a band. 
-For these cases, identify a behaviour that gets you closer e.g. join community jam sessions every month where you can meet a band, or ask to jam with someone new every week.
-
-**Give yourself a period to measure improvements.** I like to use 2 or 3 week increments. 
-If things go according to plan, at the end of this period you should be able to show yourself that you made _some_ progress towards your goal.
-Maybe something you did daily that you wanted to drop only happens 4 times a week. Incremental progress is good; this is what we want.
-
-If things do _not_ go according to plan, then we want make a change as soon as we notice a problem 
-e.g. it might not be possible to drop one of your daily responsibilities without the sponsorship of your manager. 
-So either pick another behaviour to change, or adapt your next goal to get you closer 
-e.g. discuss with your manager under which conditions you may be able to do less of your daily responsibilities.
-
-![example trade-off where less responding to support asks is replaced with researching reducing support load](/images/behaviour-heatmap-tradeoff.png)
-Example: trade-off
-
-## Seek out wisdom and sponsorship
-
-Changing behaviour is hard, especially when the behaviour you want to adopt is new to you.
-
-I recommend seeking out mentorship. You generally learn crafts and skills like guitar/woodworking way faster when you have
- teachers and mentors, and your working skills are no different.
-
-## Keep going, keep talking
-
-Periodically redo the exercise to update your ideal behaviours, reflect on your current behaviours, and pick an action that makes incremental progress to closing the gap between them.
-
-If you write this down somewhere (I use Miro), you then have a platform to communicate to your colleagues and to reference your own notes in the future. 
-I find it very helpful to let people at your work know your intentions, and this record gives a clear source of truth that you control to serve as a talking point with mentors, managers, and even people outside of work that care about what you're going through.
-
-And that's it! I hope that one or more of this can prove useful in thinking about your own personal development. The very best of luck to you.
+To close, I think it's important to acknowledge that the goals you set for yourself are based on current knowledge, which is probably flawed.
+So I think goals should be loosley held. Their purpose is to give us a reason to do the work of improving ourselves. The real output of this is what we learn from the struggle to get better.
+The core tenet here, as [one author](https://www.brandonsanderson.com/pages/the-stormlight-archive-series) would say, is "journey before destination".
