Update unwronging article
Say it simpler

--- a/articles/unwronging.mdx
+++ b/articles/unwronging.mdx
@@ -1,14 +1,25 @@
 ---
 title: Unwronging
-description: A thought exercise on progress.
+description: A thought exercise on being right more often
 date: 2021-08-31
-lastEdit: 2022-07-31
+lastEdit: 2024-09-18
 faIcon: faDna
 guid: 7fae5781-6cbf-412c-a898-3dd517e208be
 ---
 
-![](/images/unwronging.png)
+In the long term, we want to make more right decisions than wrong ones.
 
-We progress faster as a collective if we work to get better as individuals.
-We get better individually by actively looking for where we might be wrong/incomplete, acknowledging ignorance, and taking steps to address or mitigate this ignorance.
-The process is active; it requires conscious, directed effort.
+In practice, we are not perfect in our understanding, in our skills, and in the data we have.
+So we will make mistakes, and we will have incorrect assumptions - we are guaranteed to be wrong, sometimes.
+
+So what we need to get good at is "unwronging":
+ - Catch errors early so that they can be corrected.
+ - Strive to learn how we make errors so that we can avoid them entirely in future.
+ - Create an environment that promotes the above.
+
+In addition, we shouldn't forget about successes:
+ - Celebrate when we are correct. Make it feel good.
+ - Strive to understand how we can be correct, faster/cheaper.
+
+The bet is that these behaviours, over time, will allow lessons to compound and result in being right more often.
+Currently I think that this is how we can systematically builds up wisdom.
