Rework financial thoughts
Simplify it to actual thoughts.

--- a/articles/personal-financial-thoughts.mdx
+++ b/articles/personal-financial-thoughts.mdx
@@ -20,76 +20,28 @@ import { Card, Disclaimer } from "../components"
   </div>
 </Disclaimer>
 
-<Card heading="Core principles">
+**Investments**
 
-1. Money and value are subjective. Financial systems/plans have zero obligation to follow logical rules.
-1. Every guideline in finance has exceptions.
-1. Every guideline in finance is highly dependend on its context.
-1. Contexts are always changing.
+- Every investment is a gamble.
+- Low risk: I'm likely to win a little.
+- Compound interest is the most powerful force over my lifetime of investment.
+- Middle men eat the core profit that drives compound interest. Try avoid them.
+- If there was a formula we could all apply, everyone would be doing it. I have to understand what works for me in my own context.
+- Any investment that significantly outperforms the status quo will by definition become too expensive to invest in over time. For example buying real estate in my generation: it was a good investment for our grandparents, it gained value overtime. It's now valuable enough that it's too expensive for a similar class of people to invest in the same way today.
+- I can't learn without trying.
+- It is possible to lose all my investments even if I'm careful. Keep that at the back of my mind, and prepare a bit for this outcome.
+- The consequences of my investments will be owned by someone else when I die. Probably a good idea to have a plan that helps those I love.
 
-</Card>
-
-## Concepts
-
-**Salary ratio**
-
-- _salary ratio_ = _old salary_ / _new salary_
-- When changing jobs, your salary ratio between previous and new jobs shows your difference in buying-power.
-- Can be more useful than exchange rate when relocating to another country to get a sense for how expensive things are.
-- Use alongside exchange rate and cost-of-living to get a sense for how a job in a new country will affect your buying-power.
-
-**Restricted Stock Unit (RSU)**
-
-An RSU is a stock unit (e.g. one AMZN stock) that has been set aside for you, but which will only be given to you later, based
-on some conditions.
-
-- When a stock is given to you, we say that a stock "vests".
-- Often time and employment are the conditions for vesting e.g. your stock vests after 6 months if you still work for the company.
-- These are often used as a mechanism for retention. You get given new sets of RSUs in such a way that you always have some stocks that you need to wait for.
-  The fact that you will "lose" any RSUs that haven't yet vested at the time you leave.
-  This kind of scheme is sometimes called "golden handcuffs".
-
-Read on: https://www.investopedia.com/terms/r/restricted-stock-unit.asp
-
-**Stock options**
-
-An "option" is an opportunity to buy or sell one unit of stock at a specific price.
-
-- Options to buy company stock are sometimes given as employee remuneration instead of direct stock.
-- Options still require the person to actually buy the stock, but at a price that may have been locked in at a previous time.
-- The decision to buy the option is called "exercising" the option.
-- Recieving options can have very different tax implications to e.g. RSUs since the person doesn't actually own the stock yet.
-  In some cases it is possible to delay income taxes on options up until the moment where they are exercised.
-
-Read on: https://www.investopedia.com/terms/o/option.asp
-
-## Thoughts
-
-**Takeaways from [The Little Book of Common Sense Investing - John C. Bogle][1]**
-
-- Investment vehicles make money for their managers, not their investers.
-- Index funds have low management funds compared to other funds.
-- [meta] If you fidget with your investments, you lose money.
-
-[1]: https://www.audible.co.uk/pd/The-Little-Book-of-Common-Sense-Investing-Audiobook/B077VYF7FK?source_code=M2M30DFT1Bk13108101801SZ&gclid=Cj0KCQjwqp-LBhDQARIsAO0a6aIfg9N5SYIzsdkNq8Meo_y9EpW92ujr5lCBMdWVHxa9EL03hRts6ikaAqDOEALw_wcB&gclsrc=aw.ds
-
-**Takeaways from [Rich Dad Poor Dad - Robert T. Kiyosaki][2]**
-
-- Financial literacy and ability is a practiced skill.
-- Being broke is a temporary condition wich is recoverable; being poor is perspective that lasts as long as you keep it.
-- Propserity comes with work. Be proactive. Be open to opportunities. Be open to lessons.
-
-[2]: https://www.audible.co.uk/pd/Rich-Dad-Poor-Dad-Audiobook/B008BT35R2?source_code=M2M30DFT1Bk13108101801SZ&gclid=Cj0KCQjwqp-LBhDQARIsAO0a6aIDitOrXIxA3hIoOWlAbThUXpEjNFK2G8kcij5zbS5jPt0MOijvxPYaAq6BEALw_wcB&gclsrc=aw.ds
 
 **Real estate**
 
-- The house you are living in is not an asset.
-- Houses you own and are not yet fully paid are not assets.
-- Rental income for houses that are _not_ yet fully paid is _not_ profit. It is a reduction on your mortgage payments.
+- The house I'm  living in is not an asset.
+- Houses I own, and are not yet fully paid are not assets.
+- Rental income for houses that are _not_ yet fully paid is _not_ profit. It is a reduction on my mortgage payments.
 - Rental income for houses that _are_ fully paid is not _necessarily_ profit. It is first a cover for maintenance.
 - Better to buy than to rent (for the same property) in the long term.
 - Better not to buy than to buy in the wrong location at the wrong time.
-- Tension between the above two should guide when/where/how you buy.
-- You get out what you put in; requires local knowledge, continuous attention, maintenance and re-investment.
-- No one cares more about your investments than you.
-- Water is the enemy. Insist on the highest standards for work that deals with it.
+- How I resolve the tension for the above 2 points is where my personal decision matters.
+- Rentals are not passive income; I get out what I put in. Requires local knowledge, continuous attention, maintenance and re-investment.
+- Everyone else cares less about my property than I do.
+- Respect anything that deals with water. Insist on the highest standards for plumbing/drainage/moisture. If I don't, it *will* f**k me.
