--- a/articles/gatsby-notes.mdx
+++ b/articles/gatsby-notes.mdx
@@ -3,13 +3,16 @@ title: Rough notes working with Gatsby
 description: Notes from building this site on Gatsby.
 faIcon: faHammer
 date: 2021-09-01
-lastEdit: 2022-01-09
+lastEdit: 2024-09-18
 guid: ee74573a-9d9b-4886-9967-793013d4a615
 ---
 
 Theses are some notes from building this site using [Gatsby JS](https://www.gatsbyjs.com/).
 
-You can find the source code on Github at <a href="https://github.com/xpcoffee/emerickbosch.com" target="_blank">xpcoffee/emerickbosch.com</a>.
+> [!caution]
+> I no longer use Gatsby JS. I use <Link href="/articles/static-js">NextJS</Link>
+
+You can find the source code on Github at <a href="https://github.com/xpcoffee/emerickbosch.com/tree/f444b8a278db768074250d251a7dbba708efc155" target="_blank">xpcoffee/emerickbosch.com</a>.
 
 ## All-the-data with a GraphQL interface
 
