Fix caution banner

--- a/articles/gatsby-notes.mdx
+++ b/articles/gatsby-notes.mdx
@@ -9,8 +9,11 @@ guid: ee74573a-9d9b-4886-9967-793013d4a615
 
 Theses are some notes from building this site using [Gatsby JS](https://www.gatsbyjs.com/).
 
-> [!caution]
-> I no longer use Gatsby JS. I use <Link href="/articles/static-js">NextJS</Link>
+import { Disclaimer } from "../components"
+
+<Disclaimer heading="I no longer use Gatsby JS for this site.">
+  I currently use <Link href="/articles/static-js">NextJS</Link>.
+</Disclaimer>
 
 You can find the source code on Github at <a href="https://github.com/xpcoffee/emerickbosch.com/tree/f444b8a278db768074250d251a7dbba708efc155" target="_blank">xpcoffee/emerickbosch.com</a>.
 
